@@ -1,4 +1,7 @@
 2007-12-09 Benny Malengier <benny.malengier@gramps-project.org>
+	* src/gen/db/dbdir.py: always use db.DB_RECOVER
+
+2007-12-09 Benny Malengier <benny.malengier@gramps-project.org>
 	* src/plugins/NarrativeWeb.py: Use Narrated word
 
 2007-12-09  Alex Roitman  <shura@gramps-project.org>
